# codesearch

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/codesearch/: __init__.py  api.py  cli.py  embedder.py  index.py  parser.py  search.py
web/: index.html
